Separated queries into files
